force-app/main/default/objects/Cadastro_ClientedaVisita__c/Cadastro_ClientedaVisita__c.object-meta.xml
<CustomObject>
    <label>Cadastro de Cliente da Visita</label>
    <nameField>
        <label>Nome do Cadastro de Clientes da Visita</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadastros de Clientes da Visita</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>