force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cadastros de Clientes da Visita</relationshipLabel>
    <relationshipName>Cadastros_de_Clientes_da_Visita</relationshipName>
    <type>Lookup</type>
</CustomField>