force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/ChekIn__c.field-meta.xml
<CustomField>
    <fullName>ChekIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chek-in da Visita</label>
    <type>Checkbox</type>
</CustomField>