force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/DataVisita__c.field-meta.xml
<CustomField>
    <fullName>DataVisita__c</fullName>
    <label>Data/hora da Visita</label>
    <type>DateTime</type>
</CustomField>