force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/Local_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Local_da_Visita__c</fullName>
    <label>Local da Visita</label>
    <type>TextArea</type>
</CustomField>