force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/PlanejamentoVisita__c.field-meta.xml
<CustomField>
    <fullName>PlanejamentoVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planejamento de Visita</label>
    <referenceTo>VisitPlanning__c</referenceTo>
    <relationshipLabel>Clientes da Visita</relationshipLabel>
    <relationshipName>Cadastros_de_Clientes_da_Visita</relationshipName>
    <type>Lookup</type>
</CustomField>