force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/Status_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Visita__c</fullName>
    <label>Status da Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planejada</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Finalizado Com Pendências</fullName>
            </value>
            <value>
                <fullName>Finalizado e Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>