force-app/main/default/objects/Cadastro_ClientedaVisita__c/fields/Tipo_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Visita__c</fullName>
    <label>Tipo da Visita</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecção de Vendas</fullName>
            </value>
            <value>
                <fullName>Serviço Técnico</fullName>
            </value>
            <value>
                <fullName>Coleta de Documentos/Assinaturas</fullName>
            </value>
            <value>
                <fullName>Ações de Relacionamento</fullName>
            </value>
            <value>
                <fullName>Palestras e Treinamentos técnicos</fullName>
            </value>
            <value>
                <fullName>Geração de Demanda</fullName>
            </value>
            <value>
                <fullName>Tour/Dia de Campo</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
            </value>
            <value>
                <fullName>Coleta de Amostras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>