force-app/main/default/objects/Cadastro_ClientedaVisita__c/validationRules/Permite_CriarVisita.validationRule-meta.xml
<ValidationRule>
    <fullName>Permite_CriarVisita</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.ContagemVisita__c &gt;= 1</errorConditionFormula>
    <errorMessage>Contém visitas em aberto.</errorMessage>
</ValidationRule>